--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="css/default.css">
+    <title>Index</title>
 </head>
 <body>
-    
+
+
+
+    <header><i> <span class="aletter">A</span>f Svinhufvud</i>
+    </header>
+
+
+
+
 </body>
 </html>
