--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/default.css">
     <title>Home</title>
 </head>
+
 <body>
-    <nav class="flex-container-meny">
+    <nav>
         <ul>
             <li><a href="index.html">Hem</a></li>
-            <li><a href="about.html">Om Oss</a></li>
             <li><a href="sales.html">Försäljning</a></li>
+            <li><a href="about.html">Om Oss</a></li>
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
 </body>
+
 </html>
