tagit bort massa kod som giv konflikter

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
-  <footer class="footer">
+  <footer>
     <div class="main">
         <i class="round-fig"></i>
         <div>
@@ -27,43 +27,6 @@
           <p>Få nyheter, guider och inspiration om bostadsmarknden.</p>
         </div>
         <button class="button">Prenumerera</button>
-      </div>
-      <hr>
-      <div class="contact">
-        <ul>
-          <li><a href="#">Hitta mäklare</a></li>
-          <li><a href="#">Huvudkontor</a></li>
-          <li><a href="#">Kundservice</a></li>
-          <li><a href="#">Värdera bostad</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Jobba hos oss</a></li>
-          <li><a href="#">Pressrum</a></li>
-          <li><a href="#">Bloggen</a></li>
-          <li><a href="#">Guider</a></li>
-        </ul>
-        <div class="about">
-        <h2>Om Svensk Fastighetsförmedling</h2>
-        <p>
-          Från starten 1937 har vi växt till ett av landets 
-          största mäklarföretag. När vi idag förmedlar 
-          bostäder, nyproduktionsprojekt, skog & lantbruk 
-          och kommersiella fastigheter över hela Sverige och 
-          i Spanien så är ambitionen fortsatt densamma, 
-          att erbjuda kunderna den bästa mäklartjänsten.
-        </p>
-      </div>
-      </div>
-      <hr>
-      <div class="socialmedia">
-        <ul>
-          <li><a href="#"><i class="icon-fig"></i><i class="fab fa-facebook fa-3x"></i></a></li>
-          <li><a href="#"><i class="icon-fig"></i><i class="fab fa-twitter fa-3x"></i></a></li>
-          <li><a href="#"><i class="icon-fig"></i><i class="fab fa-youtube fa-3x"></i></a></li>
-          <li><a href="#"><i class="icon-fig"></i><i class="fab fa-instagram fa-3x"></i></a></li>
-          <li><a href="#"><i class="icon-fig"></i><i class="fab fa-pinterest fa-3x"></i></a></li>
-          <li><a href="#"><i class="icon-fig"></i><i class="fab fa-linkedin-in fa-3x"></i></a></li>
-        </ul>
       </div>
     </footer>
 </body>
