lagt till lite grid

--- a/main.html
+++ b/main.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/normalize.css">
     <title>Home</title>
 </head>
 
-<body>
+<body class="grid-container">
     <header><i> <span class="aletter">A</span>f Svinhufvud</i>
     </header>
     <nav>
@@ -21,16 +20,9 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
-    <main></main>
     <footer>
-        <div class="main">
-            <i class="round-fig"></i>
-            <div>
-                <h2>Prenumerera på vårt nyhetsbrev</h2>
-                <p>Få nyheter, guider och inspiration om bostadsmarknden.</p>
-            </div>
-            <button class="button">Prenumerera</button>
-        </div>
+        <h2>Prenumerera på vårt nyhetsbrev</h2>
+        <p>Få nyheter, guider och inspiration om bostadsmarknden.</p>
     </footer>
 </body>
 
