--- a/main.html
+++ b/main.html
@@ -20,6 +20,12 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
+    <main class="background-top">
+        <h1>Välkommen till dig nya hem</h1>
+    </main>
+    <section class="section1">Bild 1</section>
+    <section class="section2">Bild 2</section>
+    <section class="section3">Bild 3</section>
     <footer>
         <h2>Prenumerera på vårt nyhetsbrev</h2>
         <p>Få nyheter, guider och inspiration om bostadsmarknden.</p>
