fixat med padding

--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <title>Main</title>
 </head>
 
 <body class="grid-container">
@@ -28,7 +29,7 @@
     <section class="section3">Bild 3</section>
     <footer>
         <h2>Prenumerera på vårt nyhetsbrev</h2>
-        <p>Få nyheter, guider och inspiration om bostadsmarknden.</p>
+        <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
     </footer>
 </body>
 
