ändrat om img värden

--- a/main.html
+++ b/main.html
@@ -24,9 +24,9 @@
     <main class="background-top">
         <h1>Välkommen till dig nya hem</h1>
     </main>
-    <section class="section1">Bild 1</section>
-    <section class="section2">Bild 2</section>
-    <section class="section3">Bild 3</section>
+    <img src="img/interior1.png" class="img1" alt="interior1.png">
+    <img src="img/interior2.png" class="img2" alt="interior2.png">
+    <img src="img/interior3.png" class="img3" alt="interior3.png">
     <footer>
         <h2>Prenumerera på vårt nyhetsbrev</h2>
         <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
