ändrat om menyn, placering av bilder

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <main class="background-top">
-        <h1>Välkommen till dig nya hem</h1>
+        <h1>Välkommen till ditt nya hem</h1>
     </main>
     <img src="img/interior1.png" class="img1" alt="interior1.png">
     <img src="img/interior2.png" class="img2" alt="interior2.png">
