ändrat om storlekar, tagit bort bilder

--- a/main.html
+++ b/main.html
@@ -10,27 +10,33 @@
     <title>Main</title>
 </head>
 
-<body class="grid-container">
-    <header><i> <span class="aletter">A</span>f Svinhufvud</i>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="main.html">Hem</a></li>
-            <li><a href="service.html">Försäljning</a></li>
-            <li><a href="about.html">Om Oss</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
-        </ul>
-    </nav>
-    <main class="background-top">
-        <h1>Välkommen till ditt nya hem</h1>
-    </main>
-    <img src="img/interior1.png" class="img1" alt="interior1.png">
-    <img src="img/interior2.png" class="img2" alt="interior2.png">
-    <img src="img/interior3.png" class="img3" alt="interior3.png">
-    <footer>
-        <h2>Prenumerera på vårt nyhetsbrev</h2>
-        <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
-    </footer>
+<body>
+    <div class="grid-container">
+        <header><i> <span class="aletter">A</span>f Svinhufvud</i>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="main.html">Hem</a></li>
+                <li><a href="service.html">Försäljning</a></li>
+                <li><a href="about.html">Om Oss</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1>Välkommen till ert framtida hem</h1>
+        </main>
+        <article class="article1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum est, quod autem
+            quam
+            reprehenderit laboriosam perferendis aperiam similique cupiditate omnis laborum vero, reiciendis
+            exercitationem ex provident fugit accusamus. Cumque quod ab, perspiciatis magnam ipsum officiis tenetur
+            similique asperiores dolorem aut ullam quidem. Numquam quia voluptatum dolore perspiciatis explicabo,
+            sint
+            consequuntur!</article>
+        <footer>
+            <h2>Prenumerera på vårt nyhetsbrev</h2>
+            <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
+        </footer>
+    </div>
 </body>
 
 </html>
