fixar med storlekar på grid

--- a/main.html
+++ b/main.html
@@ -25,13 +25,18 @@
         <main>
             <h1>Välkommen till ert framtida hem</h1>
         </main>
-        <article class="article1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum est, quod autem
-            quam
-            reprehenderit laboriosam perferendis aperiam similique cupiditate omnis laborum vero, reiciendis
-            exercitationem ex provident fugit accusamus. Cumque quod ab, perspiciatis magnam ipsum officiis tenetur
-            similique asperiores dolorem aut ullam quidem. Numquam quia voluptatum dolore perspiciatis explicabo,
-            sint
-            consequuntur!</article>
+        <article class="article1">
+            <h2>Din mäklare i Stockholm</h2>
+            <p>Att köpa en ny bostad är en stor affär. Därför är det viktigt att du känner förtroende för den mäklare du
+                väljer.
+                Med oss tar inte jobbet slut när annonsen kommit upp på Hemnet. Vi i familjen Af Svinhufvud jobbar
+                aktivt hela vägen till
+                påskrivning med att pusha ut ditt objekt i sociala medier och andra kanaler.
+            </p>
+        </article>
+        <section class="section1">bild 1</section>
+        <section class="section2">bild 2</section>
+        <section class="section3">bild 3</section>
         <footer>
             <h2>Prenumerera på vårt nyhetsbrev</h2>
             <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
