gjort om grid lite samt fixat med nya bilder

--- a/main.html
+++ b/main.html
@@ -22,25 +22,38 @@
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
-        <main>
-            <h1>Välkommen till ert framtida hem</h1>
-        </main>
-        <article class="article1">
-            <h2>Din mäklare i Stockholm</h2>
-            <p>Att köpa en ny bostad är en stor affär. Därför är det viktigt att du känner förtroende för den mäklare du
-                väljer.
-                Med oss tar inte jobbet slut när annonsen kommit upp på Hemnet. Vi i familjen Af Svinhufvud jobbar
-                aktivt hela vägen till
-                påskrivning med att pusha ut ditt objekt i sociala medier och andra kanaler.
-            </p>
-        </article>
-        <section class="section1">bild 1</section>
-        <section class="section2">bild 2</section>
-        <section class="section3">bild 3</section>
+        <div class="grid-container2">
+            <main>
+                <h1>Välkommen till ert framtida hem</h1>
+            </main>
+            <article class="article1">
+                <h2>Din mäklare i Stockholm</h2>
+                <p>Att köpa en ny bostad är en stor affär. Därför är det viktigt att du känner förtroende för den
+                    mäklare du
+                    väljer.
+                    Med oss tar inte jobbet slut när annonsen kommit upp på Hemnet. Vi i familjen Af Svinhufvud jobbar
+                    aktivt hela vägen till
+                    påskrivning med att pusha ut ditt objekt i sociala medier och andra kanaler.
+                </p>
+            </article>
+            <section class="section1">
+                <h1>Sälja Bostad</h1>
+                <button class="button">BOKA VÄRDERING</button>
+            </section>
+            <section class="section2">
+                <h1>Köpa Bostad</h1>
+                <button class="button">BOKA VISNING</button>
+            </section>
+            <section class="section3">
+                <h1>Nyproduktion</h1>
+                <button class="button">KONTAKTA OSS</button>
+            </section>
+        </div>
         <footer>
             <h2>Prenumerera på vårt nyhetsbrev</h2>
             <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
         </footer>
+
     </div>
 </body>
 
