klar med desktop sidan

--- a/main.html
+++ b/main.html
@@ -46,8 +46,15 @@
             </section>
             <section class="section3">
                 <h1>Nyproduktion</h1>
-                <button class="button">KONTAKTA OSS</button>
+                <button type="button">KONTAKTA OSS</button>
             </section>
+            <article class="article2">
+                <h1>Rådgivning</h1>
+                <h2>Köpa eller sälja först, vad händer på bostadsmarknaden och hur går en bostadsförsäljning till?</h2>
+                <p>En av våra mäklare kontaktar gärna dig för ett kostnadsfritt rådgivningsmöte. Då du även kan få
+                    tillgång till våra bevakningstjänster.</p>
+                <button type="button" class="btn-2">BOKA RÅDGIVNING</button>
+            </article>
         </div>
         <footer>
             <h2>Prenumerera på vårt nyhetsbrev</h2>
