--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   </header>
   <nav>
     <ul>
-      <li><a href="index.html">Hem</a></li>
+      <li><a href="main.html">Hem</a></li>
       <li><a href="sales.html">Försäljning</a></li>
       <li><a href="about.html">Om Oss</a></li>
       <li><a href="contact.html">Kontakt</a></li>
