Skapade en conatiner runt body

--- a/service.html
+++ b/service.html
@@ -9,18 +9,18 @@
     <title>Service</title>
 </head>
 
-<body>
+<body class="content">
     <header><i> <span class="aletter">A</span>f Svinhufvud</i>
     </header>
     <nav>
         <ul>
             <li><a href="main.html">Hem</a></li>
-            <li><a href="service.html">Försäljning</a></li>
+            <li><a href="service.html">Tjänster</a></li>
             <li><a href="about.html">Om Oss</a></li>
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
-	<div class="content">
+	<div>
 	</div>
     <footer>
         <h2>Prenumerera på vårt nyhetsbrev</h2>
