Skapade klasserna box-section-1 box-section-2

--- a/service.html
+++ b/service.html
@@ -20,8 +20,19 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
-	<div>
-	</div>
+	<div class="box-section-1">
+        <section id="box1"></section>
+        <section id="box2"></section>
+        <section id="box3"></section>
+    </div>
+    <div class="box-section-2">
+        <section id="box4"></section>
+        <section id="box5"></section>
+        <section id="box6"></section>
+        <section id="box7"></section>
+        <section id="box8"></section>
+        <section id="box9"></section>
+    </div>
     <footer>
         <h2>Prenumerera på vårt nyhetsbrev</h2>
         <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
