--- a/service.html
+++ b/service.html
@@ -21,17 +21,80 @@
         </ul>
     </nav>
 	<div class="box-section-1">
-        <section id="box1"></section>
-        <section id="box2"></section>
-        <section id="box3"></section>
+        <section id="box1">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
+        <section id="box2">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
+        <section id="box3">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
     </div>
     <div class="box-section-2">
-        <section id="box4"></section>
-        <section id="box5"></section>
-        <section id="box6"></section>
-        <section id="box7"></section>
-        <section id="box8"></section>
-        <section id="box9"></section>
+        <section id="box4">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
+        <section id="box5">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
+        <section id="box6">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
+        <section id="box7">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
+        <section id="box8">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
+        <section id="box9">
+            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <p>
+                Consectetur adipisicing elit, 
+                sed do eiusmod tempor ut et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud.
+             </p>
+        </section>
     </div>
     <footer>
         <h2>Prenumerera på vårt nyhetsbrev</h2>
