La till sektioner i footer

--- a/service.html
+++ b/service.html
@@ -97,8 +97,19 @@
         </section>
     </div>
     <footer>
-        <h2>Prenumerera på vårt nyhetsbrev</h2>
-        <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
+        <div id="footer-text">
+            <h2>Prenumerera på vårt nyhetsbrev</h2>
+            <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
+        </div>
+        <button class="button">Prenumerera</button>
+        <ul class="footer-links">
+           <li>facebook</li> 
+           <li>twitter</li> 
+           <li>youtube</li> 
+           <li>instagram</li> 
+           <li>pinterest</li> 
+           <li>linkedin</li> 
+        </ul>
     </footer>
 </body>
 
