La till sektioner för bakgrundsbilder

--- a/service.html
+++ b/service.html
@@ -20,6 +20,7 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
+    <div id="bg-img1"><img src="#"></div>
 	<div class="box-section-1">
         <section id="box1">
             <h2>Lorem Ipsum Dolor Sit Amet</h2>
@@ -46,6 +47,7 @@
              </p>
         </section>
     </div>
+    <div id="bg-img2"><img src="#"></div>
     <div class="box-section-2">
         <section id="box4">
             <h2>Lorem Ipsum Dolor Sit Amet</h2>
