--- a/about.html
+++ b/about.html
@@ -96,10 +96,12 @@
   </div>
 
   <footer>
-    <a href="om.html" class="topmeny">
-      <h2 class="omoss">OM OSS</h2>
-    </a>
-  </footer>
+    <div id="footer-text">
+        <h2>Prenumerera på vårt nyhetsbrev</h2>
+        <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
+    </div>
+    <button class="button">Prenumerera</button>
+</footer>
 
 </body>
 </html>
