--- a/service.html
+++ b/service.html
@@ -20,7 +20,7 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
-    <div id="bg-img1"><img src="#"></div>
+    <div id="bg-img1"><img src="img/service-img-1.jpg"></div>
 	<div class="box-section-1">
         <section id="box1">
             <h2>Lorem Ipsum Dolor Sit Amet</h2>
@@ -47,7 +47,7 @@
              </p>
         </section>
     </div>
-    <div id="bg-img2"><img src="#"></div>
+    <div id="bg-img2"><img src="img/service-img-2.jpg"></div>
     <div class="box-section-2">
         <section id="box4">
             <h2>Lorem Ipsum Dolor Sit Amet</h2>
