La till footer till index och css

--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
-  <footer>
-    <div class="main">
-        <i class="round-fig"></i>
-        <div>
+    <footer>
+      <div id="footer-text">
           <h2>Prenumerera på vårt nyhetsbrev</h2>
-          <p>Få nyheter, guider och inspiration om bostadsmarknden.</p>
-        </div>
-        <button class="button">Prenumerera</button>
+          <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
       </div>
-    </footer>
+      <button class="button">Prenumerera</button>
+  </footer>
 </body>
 
 </html>
