lagt till footer

--- a/main.html
+++ b/main.html
@@ -57,8 +57,11 @@
             </article>
         </div>
         <footer>
-            <h2>Prenumerera på vårt nyhetsbrev</h2>
-            <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
+            <div id="footer-text">
+                <h2>Prenumerera på vårt nyhetsbrev</h2>
+                <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
+            </div>
+            <button class="button">Prenumerera</button>
         </footer>
 
     </div>
