ändrat namn i navbar

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Hem</a></li>
-            <li><a href="sales.html">Försäljning</a></li>
-            <li><a href="about.html">Om Oss</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="main.html">Hem</a></li>
+                <li><a href="service.html">Tjänster</a></li>
+                <li><a href="about.html">Om Oss</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
     <footer>
