Html-text-ändrat-tjänster

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <nav>
     <ul>
       <li><a href="main.html">Hem</a></li>
-      <li><a href="service.html">Försäljning</a></li>
+      <li><a href="service.html">Tjänster</a></li>
       <li><a href="about.html">Om Oss</a></li>
       <li><a href="contact.html">Kontakt</a></li>
     </ul>
