La till ny text till mina boxar

--- a/service.html
+++ b/service.html
@@ -24,78 +24,71 @@
     <div id="bg-img1"><img src="img/service-img-1.jpg"></div>
 	<div class="box-section-1">
         <section id="box1">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Mäklare</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Vi har Sveriges mest erfarna mäklarteam som 
+				exempelvis har sålt Sveriges dyraste bostad genom tiderna.
              </p>
         </section>
         <section id="box2">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Kontor</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Vi har stora exponeringsytor på Stockholms mest 
+				trafikerade och populära adresser.
              </p>
         </section>
         <section id="box3">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Kundregister</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Vi har branschens mest attraktiva kundregister, 
+				både i Sverige och utomlands.
              </p>
         </section>
     </div>
     <div id="bg-img2"><img src="img/service-img-2.jpg"></div>
     <div class="box-section-2">
         <section id="box4">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Fotografering</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Fotografering, styling och art direction 
+				sköts av vårt inhouse-team.
              </p>
         </section>
         <section id="box5">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Sociala Medier</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+               Vi har branschens största Instagram- och Facebook-konton, 
+			   utöver det mäklarnas egna sociala medier-konton. 
              </p>
         </section>
         <section id="box6">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Marknadsföring</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Utöver traditionella kanaler som hemnet.se, 
+				booli.se och hittahem.se har vi även två stora 
+				internationella digitala kanaler.
              </p>
         </section>
         <section id="box7">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Värdekollen</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Känner du till det aktuella värdet på din bostad? 
+				Med Värdekollen kan du enkelt följa värdeutvecklingen på din bostad. 
              </p>
         </section>
         <section id="box8">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Försprång</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Med den kostnadsfria tjänsten Försprång® planerar och 
+				förbereder vi din försäljning, så att allt är klart 
+				när du bestämmer dig för att sälja. 
              </p>
         </section>
         <section id="box9">
-            <h2>Lorem Ipsum Dolor Sit Amet</h2>
+            <h2>Värdera bostad</h2>
             <p>
-                Consectetur adipisicing elit, 
-                sed do eiusmod tempor ut et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud.
+                Du kanske undrar när det är dags att sälja din bostad? 
+				Vi erbjuder dig en kostnadsfri värdering! 
              </p>
         </section>
     </div>
