ändrat nämn på index till default och från main till index samt  ändrat namn på länkningen på i allas html

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   </header>
   <nav>
     <ul>
-      <li><a href="main.html">Hem</a></li>
+      <li><a href="index.html">Hem</a></li>
       <li><a href="service.html">Tjänster</a></li>
       <li><a href="about.html">Om Oss</a></li>
       <li><a href="contact.html">Kontakt</a></li>
@@ -79,7 +79,7 @@
     <img src="img/img2.png" alt="" class="section5image">
     <h2 class="section5text1">
       Jag tvekade på mina vänners råd, men nu är jag supernöjd.
-      <i class="section5texti1">"Lars Göran Lindskog"</i> 
+      <i class="section5texti1">"Lars Göran Lindskog"</i>
     </h2>
     <h2 class="section5text2">
       När jag beslutade för att sälja, så valde jag till slut
@@ -97,11 +97,12 @@
 
   <footer>
     <div id="footer-text">
-        <h2>Prenumerera på vårt nyhetsbrev</h2>
-        <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
+      <h2>Prenumerera på vårt nyhetsbrev</h2>
+      <p>Få nyheter, guider och inspiration om bostadsmarknaden.</p>
     </div>
     <button class="button">Prenumerera</button>
-</footer>
+  </footer>
 
 </body>
+
 </html>
