--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap">
     <title>Service</title>
@@ -15,34 +15,34 @@
     </header>
     <nav>
         <ul>
-            <li><a href="main.html">Hem</a></li>
+            <li><a href="index.html">Hem</a></li>
             <li><a href="service.html">Tjänster</a></li>
             <li><a href="about.html">Om Oss</a></li>
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
     <div id="bg-img1"><img src="img/service-img-1.jpg"></div>
-	<div class="box-section-1">
+    <div class="box-section-1">
         <section id="box1">
             <h2>Mäklare</h2>
             <p>
-                Vi har Sveriges mest erfarna mäklarteam som 
-				exempelvis har sålt Sveriges dyraste bostad genom tiderna.
-             </p>
+                Vi har Sveriges mest erfarna mäklarteam som
+                exempelvis har sålt Sveriges dyraste bostad genom tiderna.
+            </p>
         </section>
         <section id="box2">
             <h2>Kontor</h2>
             <p>
-                Vi har stora exponeringsytor på Stockholms mest 
-				trafikerade och populära adresser.
-             </p>
+                Vi har stora exponeringsytor på Stockholms mest
+                trafikerade och populära adresser.
+            </p>
         </section>
         <section id="box3">
             <h2>Kundregister</h2>
             <p>
-                Vi har branschens mest attraktiva kundregister, 
-				både i Sverige och utomlands.
-             </p>
+                Vi har branschens mest attraktiva kundregister,
+                både i Sverige och utomlands.
+            </p>
         </section>
     </div>
     <div id="bg-img2"><img src="img/service-img-2.jpg"></div>
@@ -50,46 +50,46 @@
         <section id="box4">
             <h2>Fotografering</h2>
             <p>
-                Fotografering, styling och art direction 
-				sköts av vårt inhouse-team.
-             </p>
+                Fotografering, styling och art direction
+                sköts av vårt inhouse-team.
+            </p>
         </section>
         <section id="box5">
             <h2>Sociala Medier</h2>
             <p>
-               Vi har branschens största Instagram- och Facebook-konton, 
-			   utöver det mäklarnas egna sociala medier-konton. 
-             </p>
+                Vi har branschens största Instagram- och Facebook-konton,
+                utöver det mäklarnas egna sociala medier-konton.
+            </p>
         </section>
         <section id="box6">
             <h2>Marknadsföring</h2>
             <p>
-                Utöver traditionella kanaler som hemnet.se, 
-				booli.se och hittahem.se har vi även två stora 
-				internationella digitala kanaler.
-             </p>
+                Utöver traditionella kanaler som hemnet.se,
+                booli.se och hittahem.se har vi även två stora
+                internationella digitala kanaler.
+            </p>
         </section>
         <section id="box7">
             <h2>Värdekollen</h2>
             <p>
-                Känner du till det aktuella värdet på din bostad? 
-				Med Värdekollen kan du enkelt följa värdeutvecklingen på din bostad. 
-             </p>
+                Känner du till det aktuella värdet på din bostad?
+                Med Värdekollen kan du enkelt följa värdeutvecklingen på din bostad.
+            </p>
         </section>
         <section id="box8">
             <h2>Försprång</h2>
             <p>
-                Med den kostnadsfria tjänsten Försprång® planerar och 
-				förbereder vi din försäljning, så att allt är klart 
-				när du bestämmer dig för att sälja. 
-             </p>
+                Med den kostnadsfria tjänsten Försprång® planerar och
+                förbereder vi din försäljning, så att allt är klart
+                när du bestämmer dig för att sälja.
+            </p>
         </section>
         <section id="box9">
             <h2>Värdera bostad</h2>
             <p>
-                Du kanske undrar när det är dags att sälja din bostad? 
-				Vi erbjuder dig en kostnadsfri värdering! 
-             </p>
+                Du kanske undrar när det är dags att sälja din bostad?
+                Vi erbjuder dig en kostnadsfri värdering!
+            </p>
         </section>
     </div>
     <footer>
