--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,7 @@
         <h4>Letar du efter ditt nya drömhem? Är du redo att gå vidare från ditt gamla?
         <br>Lämna gärna dina uppgifter, så kontaktar någon av våra mäklare dig.</h4> 
     <br>
+</div>
             <div id=formular>
                 <form id="form1" name="form" method="POST" action=" ">
                     <label for="name">Namn</label> <br>
